--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunil Giri</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="hero">
         <nav>
-            <img src="images/logo3.png" class="logo">
+            <img src="logo3.png" class="logo">
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
@@ -24,11 +24,11 @@
             <h1>I,M Sunil <span>Giri</span></h1>
             <p>This is my official Portfolio website to showcase my 
                 all works related to <br> web development and ui design. </p>
-            <a href="files/sunil-giri-cv.pdf">Downdload CV</a>
+            <a href="sunil-giri-cv.pdf">Downdload CV</a>
         </div>
         <div class="images">
-            <img src="images/shape.png" class="shape">
-            <img src="images/boy.png" class="boy">
+            <img src="shape.png" class="shape">
+            <img src="boy.png" class="boy">
         </div>
 
         <div class="social">
